week-2/styles.css
body {
    margin: 0;
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    color: black;
    background: #5900b3;
}

#wrapper {
    margin: 0 auto;
    max-width: 1100px; 
    display: flex;
    flex-direction: column;
}

nav {
    padding: 10px 20px;
    display: flex;
    align-items: center;
    justify-content:space-between;
    background: #990033;
}

.navigation a {
    color: white;
    margin-left: 20px;
    text-decoration: none;

}
.splash {
    background: url("assets/images/hero.jpg");
    height: 450px;
    background-size: cover;
    background-position: center top;
    background-repeat: no-repeat;
    display: flex;
    position: relative;
    justify-content: center;
    align-items: center;
}

.splashContent {
    padding: 10px 20px;
    width: 100%;
    color: white;
    text-align: center;
    box-sizing: border-box;
    align-self: stretch;
    background: rgba(0,0,0,0.25);
}

.full {
    margin: 20px 0;
    padding: 25px 20px;
    max-width: none;;
    background:  #cc99ff;
    border-top: 2px solid  #cc99ff;
    border-bottom: 2px solid  #cc99ff;
    box-sizing: border-box;
}

.full p {
    margin: 0;
}

.nwidth {
    margin: 35px 0 0;
    padding: 16px;
    width: 100%;
}

.nwidth p {
    max-width: 980px;
    margin: 0 auto;
    padding: 0 25px;
}
/*characters*/
.content {
    margin: 20px;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 20px;
}

.box {
    width: 250px;
    background: #d2b9fa;
    border: 2px solid rgb(108, 98, 98);
    text-align: center;
    padding: 15px;
}

.imgBox {

    border: 2px solid white;
    margin-bottom: 10px;
    padding: 10px;
    height: 240px;
    border-radius: 20px;
}

.imgBox img {
    height: 220px;
    width: 100%;
    display: block;
    object-fit: cover;
    border-radius: 20px;
}

footer {
    background: #990033;
    color: white;
    text-align: center;
    padding: 15px 10px;
}

footer .copyright p {
    margin: 10px;
    font-size: 10px;
}

footer .links {
    display: flex;
    justify-content: center;
    gap:45px;
}

footer .links a {
    color: white;
    text-decoration: none;
    margin: 15px;
}

.logo img {
    height: 40px;
    display: block;
}

